.state/backup-dnscert/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    meta.helm.sh/release-name: infra
    meta.helm.sh/release-namespace: platform-mesh-system
  creationTimestamp: "2026-08-10T11:10:31Z"
  generation: 3
  labels:
    app.kubernetes.io/managed-by: Helm
    helm.toolkit.fluxcd.io/name: infra
    helm.toolkit.fluxcd.io/namespace: platform-mesh-system
  name: k8sapi-gateway
  namespace: platform-mesh-system
  resourceVersion: "2221826"
  uid: 571ac097-929d-4bcc-95b7-b56eb594adac
spec:
  gatewayClassName: traefik
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: ai-trust-1.ai-trust.shoot.gardener.cc-one.showroom.apeirora.eu
    name: terminate
    port: 8443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: domain-certificate
        namespace: platform-mesh-system
      mode: Terminate
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: '*.ai-trust-1.ai-trust.shoot.gardener.cc-one.showroom.apeirora.eu'
    name: terminate-wildstar
    port: 8443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: domain-certificate
        namespace: platform-mesh-system
      mode: Terminate
  - allowedRoutes:
      namespaces:
        from: All
    name: passthrough
    port: 8443
    protocol: TLS
    tls:
      mode: Passthrough
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: '*.services.ai-trust-1.ai-trust.shoot.gardener.cc-one.showroom.apeirora.eu'
    name: terminate-services
    port: 8443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: domain-certificate
        namespace: platform-mesh-system
      mode: Terminate
  - allowedRoutes:
      namespaces:
        from: All
    hostname: ai-trust-platform-main.ai-trust-1.ai-trust.shoot.gardener.cc-one.showroom.apeirora.eu
    name: terminate-aitrust
    port: 8443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: domain-certificate
        namespace: platform-mesh-system
      mode: Terminate
  - allowedRoutes:
      namespaces:
        from: All
    hostname: '*.aitrust-1.ai-trust.shoot.gardener.cc-one.showroom.apeirora.eu'
    name: terminate-aitrust-wild
    port: 8443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: domain-certificate
        namespace: platform-mesh-system
      mode: Terminate
status:
  addresses:
  - type: IPAddress
    value: 130.214.18.166
  conditions:
  - lastTransitionTime: "2026-08-11T13:37:19Z"
    message: Gateway successfully scheduled
    observedGeneration: 3
    reason: Accepted
    status: "True"
    type: Accepted
  - lastTransitionTime: "2026-08-11T13:37:19Z"
    message: Gateway successfully scheduled
    observedGeneration: 3
    reason: Programmed
    status: "True"
    type: Programmed
  listeners:
  - attachedRoutes: 7
    conditions:
    - lastTransitionTime: "2026-08-11T13:37:19Z"
      message: No error found
      observedGeneration: 3
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-08-11T13:37:19Z"
      message: No error found
      observedGeneration: 3
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    - lastTransitionTime: "2026-08-11T13:37:19Z"
      message: No error found
      observedGeneration: 3
      reason: Programmed
      status: "True"
      type: Programmed
    name: terminate
    supportedKinds:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
    - group: gateway.networking.k8s.io
      kind: GRPCRoute
  - attachedRoutes: 15
    conditions:
    - lastTransitionTime: "2026-08-11T13:37:19Z"
      message: No error found
      observedGeneration: 3
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-08-11T13:37:19Z"
      message: No error found
      observedGeneration: 3
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    - lastTransitionTime: "2026-08-11T13:37:19Z"
      message: No error found
      observedGeneration: 3
      reason: Programmed
      status: "True"
      type: Programmed
    name: terminate-wildstar
    supportedKinds:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
    - group: gateway.networking.k8s.io
      kind: GRPCRoute
  - attachedRoutes: 2
    conditions:
    - lastTransitionTime: "2026-08-11T13:37:19Z"
      message: No error found
      observedGeneration: 3
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-08-11T13:37:19Z"
      message: No error found
      observedGeneration: 3
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    - lastTransitionTime: "2026-08-11T13:37:19Z"
      message: No error found
      observedGeneration: 3
      reason: Programmed
      status: "True"
      type: Programmed
    name: passthrough
    supportedKinds:
    - group: gateway.networking.k8s.io
      kind: TCPRoute
    - group: gateway.networking.k8s.io
      kind: TLSRoute
  - attachedRoutes: 7
    conditions:
    - lastTransitionTime: "2026-08-11T13:37:19Z"
      message: No error found
      observedGeneration: 3
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-08-11T13:37:19Z"
      message: No error found
      observedGeneration: 3
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    - lastTransitionTime: "2026-08-11T13:37:19Z"
      message: No error found
      observedGeneration: 3
      reason: Programmed
      status: "True"
      type: Programmed
    name: terminate-services
    supportedKinds:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
    - group: gateway.networking.k8s.io
      kind: GRPCRoute
  - attachedRoutes: 9
    conditions:
    - lastTransitionTime: "2026-08-11T13:37:19Z"
      message: No error found
      observedGeneration: 3
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-08-11T13:37:19Z"
      message: No error found
      observedGeneration: 3
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    - lastTransitionTime: "2026-08-11T13:37:19Z"
      message: No error found
      observedGeneration: 3
      reason: Programmed
      status: "True"
      type: Programmed
    name: terminate-aitrust
    supportedKinds:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
    - group: gateway.networking.k8s.io
      kind: GRPCRoute
  - attachedRoutes: 0
    conditions:
    - lastTransitionTime: "2026-08-11T13:37:19Z"
      message: No error found
      observedGeneration: 3
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-08-11T13:37:19Z"
      message: No error found
      observedGeneration: 3
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    - lastTransitionTime: "2026-08-11T13:37:19Z"
      message: No error found
      observedGeneration: 3
      reason: Programmed
      status: "True"
      type: Programmed
    name: terminate-aitrust-wild
    supportedKinds:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
    - group: gateway.networking.k8s.io
      kind: GRPCRoute
